--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 			rel="stylesheet"
 			href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
 		/>
-		<title>Vite + React + TS</title>
+		<title>INV-PRO</title>
 	</head>
 	<body>
 		<div id="root"></div>
