--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 			href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
 		/>
 		<title>INV-PRO</title>
+		<base href="/" />
 	</head>
 	<body>
 		<div id="root"></div>
