updated meta information

--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="description" content="Effortlessly manage and organize your inventory at home, in the office, or storage units with our intuitive platform. Track locations, create rooms, and list items efficiently. Capture the details with descriptions and images for each location, room, and item. Simplify your inventory management experience today.">
 		<link
 			rel="stylesheet"
 			href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
 		/>
-		<title>HI-Man</title>
+		<title>Inventory Manager</title>
 		<base href="/" />
 	</head>
 	<body>
