--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 			rel="stylesheet"
 			href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
 		/>
-		<title>Inventory Manager</title>
+		<title>Free INV</title>
 		<base href="/" />
 	</head>
 	<body>
