--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 			name="description"
 			content="Effortlessly manage and organize your inventory at home, in the office, or storage units with our intuitive platform. Track locations, create rooms, and list items efficiently. Capture the details with descriptions and images for each location, room, and item. Simplify your inventory management experience today."
 		/>
-		<title>Free INV</title>
+		<meta name="author" content="James Corey" />
+		<title>My Free INV</title>
 		<base href="/" />
 	</head>
 	<body>
