updated google adsense meta tag

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 			content="Effortlessly manage and organize your inventory at home, in the office, or storage units with our intuitive platform. Track locations, create rooms, and list items efficiently. Capture the details with descriptions and images for each location, room, and item. Simplify your inventory management experience today."
 		/>
 		<meta name="author" content="James Corey" />
+		<meta name="google-adsense-account" content="ca-pub-7978037682011195" />
 		<title>My Free INV</title>
 		<base href="/" />
 	</head>
